Refactor CLI host

--- a/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj
+++ b/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj
@@ -164,6 +164,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\cli\cli_models.cpp" />
+    <ClCompile Include="..\..\src\cli\cli_options.cpp" />
     <ClCompile Include="..\..\src\cli\init.cpp" />
     <ClCompile Include="..\..\src\cli\main.cpp" />
     <ClCompile Include="..\..\src\cli\trmn_graph.cpp" />
@@ -171,6 +173,8 @@
     <ClCompile Include="..\..\src\cli\trmn_graph_windows.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\cli\cli_models.h" />
+    <ClInclude Include="..\..\src\cli\cli_options.h" />
     <ClInclude Include="..\..\src\cli\init.h" />
     <ClInclude Include="..\..\src\cli\trmn_graph.h" />
     <ClInclude Include="..\..\src\cli\trmn_graph_vt.h" />
