--- a/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj.filters
+++ b/msbuild/TrominoPuzzle.Cli/TrominoPuzzle.Cli.vcxproj.filters
@@ -15,6 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\cli\cli_models.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\cli\cli_options.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\cli\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -32,6 +38,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\cli\cli_models.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\cli\cli_options.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\src\cli\init.h">
       <Filter>Header Files</Filter>
     </ClInclude>
