--- a/xcode/Tromino2d/Tromino2d.xcodeproj/xcshareddata/xcschemes/Tromino2d.xcscheme
+++ b/xcode/Tromino2d/Tromino2d.xcodeproj/xcshareddata/xcschemes/Tromino2d.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1320"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7503E7C326C892630018B1F2"
-               BuildableName = "Tromino2d"
+               BuildableName = "tromino2d"
                BlueprintName = "Tromino2d"
                ReferencedContainer = "container:Tromino2d.xcodeproj">
             </BuildableReference>
@@ -39,16 +39,18 @@
       enableUBSanitizer = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "YES"
+      ignoresPersistentStateOnLaunch = "YES"
+      debugDocumentVersioning = "NO"
+      debugXPCServices = "NO"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "NO">
+      allowLocationSimulation = "NO"
+      viewDebuggingEnabled = "No">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7503E7C326C892630018B1F2"
-            BuildableName = "Tromino2d"
+            BuildableName = "tromino2d"
             BlueprintName = "Tromino2d"
             ReferencedContainer = "container:Tromino2d.xcodeproj">
          </BuildableReference>
@@ -59,11 +61,11 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "13"
+            argument = "11"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "17"
+            argument = "13"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
@@ -86,7 +88,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7503E7C326C892630018B1F2"
-            BuildableName = "Tromino2d"
+            BuildableName = "tromino2d"
             BlueprintName = "Tromino2d"
             ReferencedContainer = "container:Tromino2d.xcodeproj">
          </BuildableReference>
