--- a/xcode/TrominoCli/TrominoCli.xcodeproj/xcshareddata/xcschemes/TrominoCli.xcscheme
+++ b/xcode/TrominoCli/TrominoCli.xcodeproj/xcshareddata/xcschemes/TrominoCli.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1320"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7594DBDA26C4822400CF433E"
-               BuildableName = "TrominoCli"
+               BuildableName = "tromino"
                BlueprintName = "TrominoCli"
                ReferencedContainer = "container:TrominoCli.xcodeproj">
             </BuildableReference>
@@ -34,19 +34,23 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableUBSanitizer = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "YES"
+      ignoresPersistentStateOnLaunch = "YES"
+      debugDocumentVersioning = "NO"
+      debugXPCServices = "NO"
       debugServiceExtension = "internal"
       allowLocationSimulation = "NO"
-      consoleMode = "1">
+      viewDebuggingEnabled = "No"
+      consoleMode = "1"
+      GPUProfilerEnabled = "No">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7594DBDA26C4822400CF433E"
-            BuildableName = "TrominoCli"
+            BuildableName = "tromino"
             BlueprintName = "TrominoCli"
             ReferencedContainer = "container:TrominoCli.xcodeproj">
          </BuildableReference>
@@ -65,6 +69,13 @@
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,7 +88,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7594DBDA26C4822400CF433E"
-            BuildableName = "TrominoCli"
+            BuildableName = "tromino"
             BlueprintName = "TrominoCli"
             ReferencedContainer = "container:TrominoCli.xcodeproj">
          </BuildableReference>
