Remove recursive editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,24 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{configure.ac,Makefile.am}]
+[{configure.ac,Makefile.am,makefile}]
 indent_style = tab
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.{ts,js,json,yml}]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+max_line_length = 80
+trim_trailing_whitespace = true
+
+[*.{css}]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
