--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ jobs:
       - script: mkdir build && cd build && ../configure
         displayName: 'Configure build'
 
-      - script: make -j $(($(nproc)*15)/10)
+      - script: make -j $((($(nproc) * 15) / 10))
         displayName: 'Make'
         workingDirectory: build
 
@@ -78,6 +78,8 @@ jobs:
     displayName: 'Build for WebAssembly'
     pool:
       vmImage: 'ubuntu-latest'
+    variables:
+      emsdkVersion: '3.1.3'
     steps:
       - task: DockerInstaller@0
         displayName: Emscripten SDK
@@ -85,5 +87,5 @@ jobs:
           dockerVersion: 18.06.3-ce
           releaseType: stable
 
-      - script: docker run -i --rm -v $(pwd):/src --workdir="/src/emscripten" emscripten/emsdk emmake make
+      - script: docker run -i --rm -v $(pwd):/src --workdir="/src/emscripten" emscripten/emsdk:$(emsdkVersion) emmake make
         displayName: 'Emscripten build for WebAssembly'
