--- a/emscripten/makefile
+++ b/emscripten/makefile
@@ -62,7 +62,7 @@ $(TARGET_LITRO): $(OBJ_DIR)/lib/tromino.o $(OBJ_DIR)/wasm/tromino_alg_wasm.o
 	-s ENVIRONMENT=web \
 	-s ERROR_ON_UNDEFINED_SYMBOLS=1 \
 	-s EXPORTED_FUNCTIONS='["_solve"]' \
-	-s EXPORTED_RUNTIME_METHODS='["ALLOC_STACK", "addFunction", "allocate", "ccall", "getValue", "removeFunction", "stackSave", "stackRestore"]' \
+	-s EXPORTED_RUNTIME_METHODS='["addFunction", "ccall", "getValue", "removeFunction", "setValue", "stackAlloc", "stackSave", "stackRestore"]' \
 	-s FILESYSTEM=0 \
 	-s INITIAL_MEMORY=64KB \
 	-s LLD_REPORT_UNDEFINED=1 \
