Update CI configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,11 @@
 sonar.projectKey=oboukli_tromino-puzzle
-sonar.organization=oboukli
 sonar.projectName=tromino-puzzle
+sonar.organization=oboukli
+
 sonar.sources=src,test,emscripten/app
 sonar.sourceEncoding=UTF-8
+
+sonar.cfamily.build-wrapper-output=build_wrapper_output_directory
+sonar.cfamily.cache.enabled=true
+sonar.cfamily.cache.path=sonarscanner_cache
+sonar.cfamily.threads=3
