--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
       sdk: macosx
     steps:
       - task: Xcode@5
-        displayName: 'Build'
+        displayName: 'Build TrominoCli'
         inputs:
           actions: 'build'
           xcWorkspacePath: 'xcode/TrominoPuzzle.xcworkspace'
@@ -79,13 +79,13 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest'
     variables:
-      emsdkVersion: '3.1.5'
+      emsdkVersion: '3.1.7'
       numMakeJobs: 3
     steps:
       - task: DockerInstaller@0
         displayName: Emscripten SDK
         inputs:
-          dockerVersion: '20.10.12'
+          dockerVersion: '20.10.13'
           releaseType: stable
 
       - script: docker run -i --rm -v $(pwd):/src --workdir="/src/emscripten" emscripten/emsdk:$(emsdkVersion) emmake make -j $(numMakeJobs)
