--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,10 @@
 
 check_PROGRAMS = libtromino_test
 
-libtromino_test_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/src/lib
+libtromino_test_CPPFLAGS = \
+	$(BOOST_CPPFLAGS) \
+	-I$(top_srcdir)/src/lib \
+	-I$(top_srcdir)/src/validation
 
 libtromino_test_SOURCES = \
 	lib/testmain_libtromino.cpp \
@@ -14,9 +17,13 @@ libtromino_test_SOURCES = \
 	lib/tromino_4x4_unittest.cpp \
 	lib/tromino_64x64_unittest.cpp \
 	lib/unittest_helper.cpp \
-	lib/unittest_helper.h
+	lib/unittest_helper.h \
+	validation/tromino_validation_unittest.cpp
 
 libtromino_test_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
-libtromino_test_LDADD = $(BOOST_UNIT_TEST_FRAMEWORK_LIB) $(top_builddir)/src/libtromino.la
+libtromino_test_LDADD = \
+	$(BOOST_UNIT_TEST_FRAMEWORK_LIB) \
+	$(top_builddir)/src/libtromino.la \
+	$(top_builddir)/src/libtromino-validation.la
 
 TESTS = $(check_PROGRAMS)
