--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ m4_define(_TRMNPZZL_VERSION_RC, 0)
 m4_define(_TRMNPZZL_VERSION_IS_RELEASE, true)
 m4_define(_COPYRIGHT_YEAR, 2022)
 
-AC_INIT([Tromino Puzzle],[m4_join(., _TRMNPZZL_VERSION_MAJOR, _TRMNPZZL_VERSION_MINOR, _TRMNPZZL_VERSION_PATCH, _TRMNPZZL_VERSION_BUILD)m4_if(_TRMNPZZL_VERSION_RC, 0, , rc_TRMNPZZL_VERSION_RC)],[https://github.com/oboukli/tromino-puzzle/issues],[trmnpzzl],[https://omar.fun/tromino-puzzle])
+AC_INIT([trmnpzzl],[m4_join(., _TRMNPZZL_VERSION_MAJOR, _TRMNPZZL_VERSION_MINOR, _TRMNPZZL_VERSION_PATCH, _TRMNPZZL_VERSION_BUILD)m4_if(_TRMNPZZL_VERSION_RC, 0, , rc_TRMNPZZL_VERSION_RC)],[https://github.com/oboukli/tromino-puzzle/issues],[trmnpzzl],[https://omar.fun/tromino-puzzle])
 AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/cli/trmn_graph.cpp])
@@ -25,6 +25,11 @@ AC_SUBST([LIBTROMINO_REVISION], [2])
 AC_SUBST([LIBTROMINO_AGE], [1])
 
 AM_PROG_AR
+
+if test "x$enable_code_coverage" = xyes; then
+    CFLAGS=""
+    CXXFLAGS=""
+fi
 
 AC_PROG_CC
 
@@ -41,5 +46,7 @@ AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 
 AX_BOOST_BASE([1.71.0], [], [AC_MSG_ERROR([Boost is not available])])
 AX_BOOST_UNIT_TEST_FRAMEWORK
+
+AX_CODE_COVERAGE
 
 AC_OUTPUT
