--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,11 @@ sonar.projectKey=oboukli_tromino-puzzle
 sonar.projectName=tromino-puzzle
 sonar.organization=oboukli
 
-sonar.sources=src,test,emscripten/app
+sonar.sources=src/, emscripten/app/
+sonar.tests=test/
 sonar.sourceEncoding=UTF-8
+sonar.scm.enabled=true
+sonar.scm.provider=git
 
 sonar.cfamily.build-wrapper-output=build_wrapper_output_directory
 sonar.cfamily.cache.enabled=true
