--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -68,6 +68,18 @@ jobs:
           --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} \
           make clean all check
 
+      - name: Run tromino
+        run: ./src/tromino
+        continue-on-error: true
+
+      - name: Run tromino 5 0 0
+        run: ./src/tromino 5 0 0 2>/dev/null
+        continue-on-error: true
+
+      - name: Run tromino 4 2 3
+        run: ./src/tromino 4 2 3 2>/dev/null
+        continue-on-error: true
+
       - name: Run gcovr
         run: >
           gcovr
